[gd_scene load_steps=3 format=3 uid="uid://dovrvqkqvvgga"]

[ext_resource type="FontFile" uid="uid://cqe0f5cadeqbk" path="res://assets/fonts/NormalFont.ttf" id="1_3hlok"]
[ext_resource type="Script" path="res://scripts/tower_selector.gd" id="1_ix3lk"]

[node name="TowerSelector" type="Control"]
process_mode = 3
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_ix3lk")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 0
offset_right = 48.0
offset_bottom = 128.0

[node name="NinjaButton" type="Button" parent="VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_fonts/font = ExtResource("1_3hlok")
theme_override_font_sizes/font_size = 8
text = "NINJA - 50G"

[node name="SageButton" type="Button" parent="VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_fonts/font = ExtResource("1_3hlok")
theme_override_font_sizes/font_size = 8
text = "SAGE - 120G"

[node name="CancelButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 8
theme_override_fonts/font = ExtResource("1_3hlok")
theme_override_font_sizes/font_size = 8
text = "CANCEL"

[connection signal="pressed" from="VBoxContainer/NinjaButton" to="." method="_on_ninja_button_pressed"]
[connection signal="pressed" from="VBoxContainer/SageButton" to="." method="_on_sage_button_pressed"]
[connection signal="pressed" from="VBoxContainer/CancelButton" to="." method="_on_cancel_button_pressed"]
